--- a/index.html
+++ b/index.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Task 2</title>
-		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext"
-			rel="stylesheet"
-		/>
-		<link href="css/bootstrap.css" rel="stylesheet" />
-		<link href="css/styles.css" rel="stylesheet" />
-	</head>
-	<body data-spy="scroll" data-target=".fixed-top">
-		<style>
-			.header h1 {
-				color: black;
-			}
-			.header .p-large {
-				margin-bottom: 2rem;
-				color: #1a1a1a;
-			}
-			.header {
-				background-color: #eeeeee;
-			}
-			#example1 {
-				box-shadow: -0.5rem 1rem #7904b4;
-			}
-			.card {
-				background-color: #9700e3;
-			}
-			.bolds {
-				font-weight: 800;
-			}
-			.btn-solid-lg {
-				border-radius: 8px;
-			}
-			.header .btn-solid-lg {
-				color: white;
-				border-color: #9700e3;
-				background-color: #9700e3;
-			}
-		
-			
-			.cards {
-				position: relative;
-				display: -ms-flexbox;
-				display: flex;
-				-ms-flex-direction: column;
-				flex-direction: column;
-				min-width: 0;
-				word-wrap: break-word;
-				background-color: #fff;
-				background-clip: border-box;
-				border: 1px solid rgba(0, 0, 0, 0.125);
-				border-radius: 0.25rem;
-			}
-		</style>
-		<header id="header" class="header">
-			<div class="header-content">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-7 col-xl-8">
-							<div class="text-container">
-								<h1>
-									Access Practical <br />
-									Online Course
-								</h1>
-								<p class="p-large">
-									<span class="bolds"> Explore, Educate, </span>
-									became an
-									<span class="bolds"> Expert </span>
-								</p>
-								<a class="btn-solid-lg page-scroll mt-4" href="sign-up.html"
-									>Daftar Sekarang</a
-								>
-							</div>
-							<!-- end of text-container -->
-						</div>
-						<!-- end of col -->
-
-						<div class="col-lg-5 col-xl-4 mt-5">
-							<div class="image-container">
-								<div id="example1" class="card">
-									<div style="display: inline-flex">
-										<img
-											class="img-fluid gambar2"
-											src="images/Man-01.png"
-											alt="alternative"
-										/>
-
-										<img
-											class="img-fluid gambar"
-											src="images/Woman-01.png"
-											alt="alternative"
-										/>
-									</div>
-								</div>
-								<!-- end of img-wrapper -->
-							</div>
-							<!-- end of image-container -->
-						</div>
-						<!-- end of col -->
-					</div>
-					<!-- end of row -->
-				</div>
-				<!-- end of container -->
-			</div>
-			<!-- end of header-content -->
-		</header>
-	
-	</body>
-</html>
+"Hello World" 
